fix access to com.apple.eawt.Application.requestToggleFullScreen by reflection